Health check deployment (#56)
* Exercises 11.19-11.21

* Pokedex App Health Monitor

* Pokedex App Health Monitor

* Pokedex App Health Monitor

* Pokedex App Health Monitor

* Pokedex App Health Monitor

* Pokedex App Health Monitor

* Pokedex App Health Monitor

* Pokedex App Health Monitor

* Remove health-check.yml

* More on deployment

* More on deployment

* More on deployment

* More on deployment

* More on deployment

* More on deployment

* More on deployment

* Health check deployment

* Health check deployment

* Health check deployment

* health-check-deployment

* Health check deployment

* Health check deployment

* Health check deployments

* Health check deployments

* Health check deployments

* Health check deployments

* Health check deployments

* Health check deployments

* Health check deployments

* Health check deployments

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,155 +1,164 @@
 name: Pokedex CI/CD Pipeline with Health Monitoring
 
 on:
-  pull_request:
-    types: [closed]
-    branches: [main]
-  schedule:
-    - cron: '0 8 * * *'
-  workflow_dispatch:
+    push:
+        branches: [main]
+    pull_request:
+        types: [opened, synchronize, closed]
+    schedule:
+        - cron: '0 8 * * *'
+    workflow_dispatch:
 
 env:
-  APP_NAME: 'Pokedex'
-  APP_URL: 'https://fullstackopen-part11-pokedex.onrender.com'
-  HEALTH_ENDPOINT: '/health'
-  VERSION_ENDPOINT: '/version'
-  DISCORD_AVATAR: 'https://cdn-icons-png.flaticon.com/512/188/188987.png'
+    APP_NAME: 'Pokedex'
+    APP_URL: 'https://fullstackopen-part11-pokedex.onrender.com'
+    HEALTH_ENDPOINT: '/health'
+    VERSION_ENDPOINT: '/version'
+    DISCORD_AVATAR: 'https://cdn-icons-png.flaticon.com/512/188/188987.png'
 
 jobs:
-  test:
-    if: github.event_name == 'pull_request'
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-      - run: npm ci --audit=false
-      - run: npx playwright install --with-deps
-      - run: |
-          npm run lint || exit 1
-          npm run build || exit 1
-          npm test || exit 1
-          npm run test:e2e || exit 1
-      - uses: actions/upload-artifact@v4
-        if: github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
-        with:
-          name: production-build
-          path: dist/
-          retention-days: 1
+    test:
+        runs-on: ubuntu-latest
+        timeout-minutes: 15
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: '20'
+                  cache: 'npm'
+            - run: npm ci --audit=false
+            - run: npx playwright install --with-deps
+            - run: |
+                  npm run lint
+                  npm run build
+                  npm test
+                  npm run test:e2e
+            - uses: actions/upload-artifact@v4
+              if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip'))
+              with:
+                  name: production-build
+                  path: dist/
+                  retention-days: 1
 
-  deploy:
-    if: github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
-    needs: test
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - run: sudo apt-get install -y jq
-      - uses: actions/download-artifact@v4
-        with:
-          name: production-build
-          path: dist
-      - name: Verify build files
-        run: |
-          [ -f dist/index.html ] || { echo "::error::index.html missing!"; exit 1; }
-          [ -f dist/bundle.js ] || { echo "::error::bundle.js missing!"; exit 1; }
+    deploy:
+        needs: test
+        if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip'))
+        runs-on: ubuntu-latest
+        permissions:
+            contents: write
+        steps:
+            - run: sudo apt-get install -y jq
+            - uses: actions/download-artifact@v4
+              with:
+                  name: production-build
+                  path: dist
+            - name: Verify build files
+              run: |
+                  [ -f dist/index.html ] || { echo "::error::index.html missing!"; exit 1; }
+                  [ -f dist/bundle.js ] || { echo "::error::bundle.js missing!"; exit 1; }
+            - name: Deploy to Render
+              run: |
+                  DEPLOY_RESPONSE=$(curl -s -X POST \
+                    "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys" \
+                    -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
+                    -H "Content-Type: application/json")
+                  DEPLOY_ID=$(echo "$DEPLOY_RESPONSE" | jq -r '.id')
+                  [ -n "$DEPLOY_ID" ] || { echo "::error::Deployment failed"; exit 1; }
+                  echo "DEPLOY_ID=$DEPLOY_ID" >> $GITHUB_ENV
+                  echo "::notice::✅ Deployment triggered! ID: $DEPLOY_ID"
+              env:
+                  RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
+                  RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
+            - name: Check deployed service
+              uses: jtalk/url-health-check-action@v4
+              with:
+                  url: ${{ env.APP_URL }}
+                  follow-redirect: false
+                  max-attempts: 3
+                  retry-delay: 5s
+                  retry-all: false
+            - name: Deployment outcome
+              run: echo "Deployment step completed."
+              if: always()
 
-      - name: Deploy to Render
-        run: |
-          DEPLOY_RESPONSE=$(curl -s -X POST \
-            "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys" \
-            -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
-            -H "Content-Type: application/json")
-          DEPLOY_ID=$(echo "$DEPLOY_RESPONSE" | jq -r '.id')
-          [ -n "$DEPLOY_ID" ] || { echo "::error::Deployment failed"; exit 1; }
-          echo "DEPLOY_ID=$DEPLOY_ID" >> $GITHUB_ENV
-          echo "::notice::✅ Deployment triggered! ID: $DEPLOY_ID"
-        env:
-          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-          RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
+    tag_release:
+        needs: [test, deploy]
+        if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip'))
+        runs-on: ubuntu-latest
+        permissions:
+            contents: write
+        steps:
+            - uses: actions/checkout@v4
+              with:
+                  fetch-depth: 0
+            - name: Bump version and push tag
+              uses: anothrNick/github-tag-action@v1
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  DEFAULT_BUMP: patch
+                  WITH_V: true
+            - name: Versioning outcome
+              if: always()
+              run: echo "Versioning step completed."
 
-      - name: Check the deployed service URL
-        uses: jtalk/url-health-check-action@v4
-        with:
-          url: https://fullstackopen-part11-pokedex.onrender.com/
-          follow-redirect: false
-          max-attempts: 3
-          retry-delay: 5s
-          retry-all: false
+    health_check:
+        if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+        runs-on: ubuntu-latest
+        outputs:
+            status_code: ${{ steps.health.outputs.status_code }}
+            response_time: ${{ steps.health.outputs.response_time }}
+            version: ${{ steps.version.outputs.version }}
+        steps:
+            - name: Check health
+              id: health
+              run: |
+                  status_code=$(curl -s -o /dev/null -w "%{http_code}" ${{ env.APP_URL }}${{ env.HEALTH_ENDPOINT }} || echo "500")
+                  response_time=$(curl -s -o /dev/null -w "%{time_total}" ${{ env.APP_URL }}${{ env.HEALTH_ENDPOINT }})
+                  echo "status_code=$status_code" >> $GITHUB_OUTPUT
+                  echo "response_time=$response_time" >> $GITHUB_OUTPUT
+                  [ "$status_code" -eq 200 ] || exit 1
+            - name: Get version
+              id: version
+              run: |
+                  version=$(curl -s ${{ env.APP_URL }}${{ env.VERSION_ENDPOINT }} | jq -r '.version // "unknown"' || echo "unknown")
+                  echo "version=$version" >> $GITHUB_OUTPUT
 
-  tag_release:
-    if: github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
-    needs: [test, deploy]
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    permissions:
-      contents: write
-    steps:
-      - name: Skip tag creation
-        run: echo "Skipping tag creation"
+    notify:
+        needs: [test, deploy, tag_release, health_check]
+        runs-on: ubuntu-latest
+        if: always()
+        steps:
+            - name: Set status emoji
+              id: set-status
+              run: |
+                  function status_emoji() {
+                    case "$1" in
+                      success) echo "✅ success" ;;
+                      failure) echo "❌ failure" ;;
+                      cancelled) echo "⚠️ cancelled" ;;
+                      *) echo "❓ $1" ;;
+                    esac
+                  }
 
-  health_check:
-    if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    outputs:
-      status_code: ${{ steps.health.outputs.status_code }}
-      response_time: ${{ steps.health.outputs.response_time }}
-      version: ${{ steps.version.outputs.version }}
-    steps:
-      - name: health check to pass
-        id: health
-        run: |
-          echo "status_code=200" >> $GITHUB_OUTPUT
-          echo "response_time=0.5" >> $GITHUB_OUTPUT
+                  echo "test_status=$(status_emoji '${{ needs.test.result }}')" >> $GITHUB_OUTPUT
+                  echo "deploy_status=$(status_emoji '${{ needs.deploy.result }}')" >> $GITHUB_OUTPUT
+                  echo "tag_status=$(status_emoji '${{ needs.tag_release.result }}')" >> $GITHUB_OUTPUT
+                  echo "health_status=$(status_emoji '${{ needs.health_check.result }}')" >> $GITHUB_OUTPUT
 
-      - name: Get version info
-        id: version
-        run: |
-          echo "version=1.0.0" >> $GITHUB_OUTPUT
+            - name: Discord notification
+              env:
+                  DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+              uses: Ilshidur/action-discord@0c4b27844ba47cb1c7bee539c8eead5284ce9fa9
+              with:
+                  args: |
+                      @simotoivanentivi23v0603
 
-  notify:
-    needs:
-      - test
-      - deploy
-      - tag_release
-      - health_check
-    runs-on: ubuntu-latest
-    if: always()
-    steps:
-      - name: Prepare data
-        id: prepare
-        run: |
-          echo "sha=${GITHUB_SHA:0:7}" >> $GITHUB_OUTPUT
-          echo "repo=$GITHUB_REPOSITORY" >> $GITHUB_OUTPUT
-          echo "run_url=https://github.com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID" >> $GITHUB_OUTPUT
+                      *${{ github.actor }}* triggered a ${{ github.event_name }} on **${{ github.repository }}**.
 
-      - name: Send notification
-        uses: actions/github-script@v6
-        env:
-          WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK }}
-        with:
-          script: |
-            const embed = {
-              title: '✅ Health Check Passed',
-              color: 5763719,
-              fields: [
-                { name: 'Status Code', value: '200', inline: true },
-                { name: 'Response Time', value: '0.5s', inline: true },
-                { name: 'Version', value: '1.0.0', inline: true },
-                { name: 'Details', value: `[View Run](${'${{ steps.prepare.outputs.run_url }}'})`, inline: false }
-              ]
-            };
+                      **Commit:** [View commit](<https://github.com/${{ github.repository }}/commit/${{ github.sha }}>)  
 
-            await fetch(process.env.WEBHOOK_URL, {
-              method: 'POST',
-              headers: { 'Content-Type': 'application/json' },
-              body: JSON.stringify({
-                username: 'Pokedex CI/CD',
-                avatar_url: '${{ env.DISCORD_AVATAR }}',
-                embeds: [embed]
-              })
-            });
+                      **Status:**
+                      🔹 **Tests:** ${{ steps.set-status.outputs.test_status }}  
+                      🔹 **Deployment:** ${{ steps.set-status.outputs.deploy_status }}  
+                      🔹 **Version Tag:** ${{ steps.set-status.outputs.tag_status }}  
+                      🔹 **Health Check:** ${{ steps.set-status.outputs.health_status }}
